# asyncapi-template

./: .eslintrc.js  .eslintrc.mjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  example-asyncapi.yaml  package-lock.json  package.json  test-template-generation.sh  validate-template.sh  webpack.config.js
.github/workflows/: release.yml  test.yml
__transpiled/: Cargo.toml.js  Cargo.toml.js.map  README.md.js  README.md.js.map  index.js  index.js.map
__transpiled/helpers/: general.js  general.js.map  index.js  rust-helpers.js  rust-helpers.js.map
__transpiled/src/: config.rs.js  config.rs.js.map  context.rs.js  context.rs.js.map  errors.rs.js  errors.rs.js.map  handlers.rs.js  handlers.rs.js.map  main.rs.js  main.rs.js.map  middleware.rs.js  middleware.rs.js.map  models.rs.js  models.rs.js.map  recovery.rs.js  recovery.rs.js.map  router.rs.js  router.rs.js.map
common/: ANALYSIS.md  INTEGRATION_EXAMPLE.md  README.md
common/src/: channel-utils.js  envelope-rust.js  error-rust.js  index.js  message-utils.js  models-rust.js  models-ts.js  operation-utils.js  schema-utils.js  security-utils.js  string-utils.js  template-utils.js
examples/: README.md  user-service.yaml
examples/cl/: asyncapi.yaml
examples/external-complicated-ref-test/: asyncapi.yaml
examples/external-ref-test/: asyncapi.yaml
examples/mqtt/: README.md  asyncapi.yaml
examples/multi-protocol/: README.md  asyncapi.yaml
examples/nats/: README.md  asyncapi.yaml
examples/realworld/: asyncapi.yaml
examples/schema-ref-test/: asyncapi.yaml
examples/servers-in-channels/: asyncapi.yaml
examples/simple/: README.md  asyncapi.yaml
examples/websocket-secure/: README.md  asyncapi.yaml
helpers/: general.js  index.js  rust-helpers.js
rust-client/: README.md  package.json
rust-client/template/: Cargo.toml.js  index.js  package.json
rust-server/: README.md  package.json
rust-server/template/: Cargo.toml.js  README.md  README.md.js  USAGE.md.js  index.js
scripts/: build-for-publish.js  restore-dev.js  test-examples.sh  test-published-packages.js
template/: .gitignore.js  Cargo.toml.js  README.md  README.md.js  USAGE.md.js  config.toml.example.js  index.js  package.json
template/examples/: basic_server.rs.js
template/helpers/: general.js  (+2 more)
test/: Cargo.toml  README.md  USAGE.md  generator.test.js  package.json
test/examples/: envelope_example.rs
test/fixtures/: amqp.yaml  kafka.yaml  mqtt.yaml  simple.yaml
test/src/: config.rs  context.rs  errors.rs  handlers.rs  lib.rs  middleware.rs  models.rs  recovery.rs
test/src/auth/: config.rs  jwt.rs  middleware.rs  mod.rs  rbac.rs  server.rs
test/src/server/: builder.rs  mod.rs
test/src/transport/: factory.rs  http.rs  mod.rs  websocket.rs
test/tests/: security_tests.rs
tests/: integration_test.js
ts-client/: .eslintrc.mjs  .gitignore  .npmignore  README.md  USAGE.md  example-api.yaml  package-lock.json  package.json
(+129 files in other folders)
