[package]
name = "secure-websocket-chat-service"
version = "1.0.0"
edition = "2021"
authors = ["AsyncAPI Generator"]
license = "Apache-2.0"
description = "AsyncAPI-generated Rust library for Secure WebSocket Chat Service"
repository = "https://github.com/your-org/secure-websocket-chat-service"
keywords = ["asyncapi", "async", "messaging", "library"]
categories = ["network-programming", "asynchronous", "web-programming"]
readme = "README.md"

# This is a library crate
[lib]
name = "secure_websocket_chat_service"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP and networking
hyper = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
regex = "1.10"
rand = "0.8"
base64 = "0.22"
axum = "0.7"
tokio-stream = "0.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Circuit breaker and resilience
circuit_breaker = "0.1"

# Authentication and authorization
jsonwebtoken = { version = "9.2", optional = true }
bcrypt = { version = "0.15", optional = true }

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["rustls"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
tempfile = "3.8"

[features]
default = ["all-protocols", "auth"]

# Protocol features
websocket = ["dep:tokio-tungstenite"]

# Enable all detected protocols by default for this specific AsyncAPI spec
all-protocols = ["websocket"]

# Optional features
auth = ["dep:jsonwebtoken", "dep:bcrypt"]

# All features enabled
all-features = ["websocket", "auth"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 256
incremental = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
